syntax = "proto3";

message IpfsMetadata {
  ActionType type = 1;
  string name = 2;
  // We version the data structured used to represent proposal metadata. Each
  // proposal type has their own metadata and versioning that we can change
  // independently of other proposal types.
  string version = 3;
  string id = 4;
}

enum ActionType {
  UNKNOWN = 0;
  ADD_EDIT = 1;
  IMPORT_SPACE = 2;
  ADD_SUBSPACE = 3;
  REMOVE_SUBSPACE = 4;
  ADD_EDITOR = 5;
  REMOVE_EDITOR = 6;
  ADD_MEMBER = 7;
  REMOVE_MEMBER = 8;
  IMPORT_EDIT = 9;
}

message Edit {
  ActionType type = 1;
  string name = 2;
  string version = 3;
  string id = 4;
  repeated Op ops = 5;
  repeated string authors = 6;
}

message Op {
  OpType opType = 1;
  Payload payload = 2;
}

message Payload {
  bytes entityId = 1;
  bytes attributeId = 2;
  Value value = 3;
}

message Value {
  ValueType type = 1;
  string value = 2;
}

enum OpType {
  NONE = 0;
  SET_TRIPLE = 1;
  DELETE_TRIPLE = 2;
}

enum ValueType {
  NULL = 0;
  TEXT = 1;
  NUMBER = 2;
  ENTITY = 3;
  COLLECTION = 4;
  CHECKBOX = 5;
  URL = 6;
  TIME = 7;
  GEO_LOCATION = 8;
}

message Membership {
  ActionType type = 1;
  string name = 2;
  string version = 3;
  string id = 4;
  string user = 5;
}

message Subspace {
  ActionType type = 1;
  string name = 2;
  string version = 3;
  string id = 4;
  string subspace = 5;
}

message ImportEdit {
  string version = 1;
  ActionType type = 2;
  string id = 3;
  string name = 4;
  repeated Op ops = 5;
  repeated string authors = 6;
  string createdBy = 7;
  string createdAt = 8;
}

// https://gateway.lighthouse.storage/ipfs/bafkreic5vxtnkgpkf54zo3jubf7fadegfwuui6nmonf6rze235ddxgl6we
message Import {
  // ActionType type = 1;
  string previousNetwork = 1;
  string previousContractAddress = 2;
  repeated string edits = 3; // points to an array of IPFS hashes containing ImportEdit action types
}